updated site to include new page for Brandon's Java Web Start application

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -60,6 +60,7 @@
     <ul>
       <li><a href="screenshots.html" class="submenlink">Screenshots</a></li>
       <li><a href="videos.html" class="submenlink">Videos</a></li>
+      <li><a href="webstart.html" class="submenlink">Web Start</a></li>
   </div>
 </div>
 
