--- a/css/blog.css
+++ b/css/blog.css
@@ -5,3 +5,14 @@
   font-size: 0.9em;
   color: #777777;
 }
+
+.list ul li
+{
+  border-left:10px;
+  margin-left:10px;
+  margin-bottom:3px;
+  padding-left:5px;
+  color: #000000;
+  list-style: circle;
+  list-style-type: circle;
+}
