gh-pages: updated javadoc link

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -83,7 +83,7 @@
       <li><a href="guide.html" class="submenlink">Guide</a></li>
       <li><a href="https://groups.google.com/forum/?fromgroups#!forum/metsci-glimpse" class="submenlink">Forum</a></li>
       <li><a href="https://github.com/metsci/glimpse/wiki" class="submenlink">Wiki</a></li>
-      <li><a href="apidocs/1.0.x/index.html" class="submenlink">Javadoc</a></li>
+      <li><a href="http://glimpse.metsci.com/apidocs/1.1.x/index.html" class="submenlink">Javadoc</a></li>
       <li><a href="requirements.html" class="submenlink">Requirements</a></li>
      </ul>
   </div>
