--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <div class="footer">
-  <span class="copyright">Copyright &copy; 2012 <a href="http://www.metsci.com">Metron Inc.</a>, licensed under the <a href="license.html">BSD License</a></span>
+  <span class="copyright">Copyright &copy; 2012 <a href="http://www.metsci.com">Metron Inc.</a>, licensed under the <a href="/license.html">BSD License</a></span>
 </div>
