--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,10 +1,10 @@
 <!-- ############### #### Navigation Bar #### ############### -->
 
 <!-- Link to styles used for our Navigation Bar -->
-<link href="css/navbar.css" rel="stylesheet" type="text/css">
+<link href="/css/navbar.css" rel="stylesheet" type="text/css">
 
 <!-- Link to a file with couple simple JavaScript functions used for our Navigation Bar -->
-<script src="js/navbar.js" language="JavaScript" type="text/javascript"></script>
+<script src="/js/navbar.js" language="JavaScript" type="text/javascript"></script>
 
 
 <!-- main nav bar titles -->
@@ -17,27 +17,27 @@
 
 <div class="mynavbar">
 
-<a class="navbartitle" id="home" href="index.html"
+<a class="navbartitle" id="home" href="/index.html"
       onMouseOut="HideItem('home_submenu');" 
       onMouseOver="ShowItem('home_submenu');"
     >Home</a
-><a class="navbartitle" id="media" href="screenshots.html"
+><a class="navbartitle" id="media" href="/screenshots.html"
       onMouseOut="HideItem('media_submenu');" 
       onMouseOver="ShowItem('media_submenu');"
     >Media</a
-><a class="navbartitle" id="download" href="download.html"
+><a class="navbartitle" id="download" href="/download.html"
       onMouseOut="HideItem('download_submenu');" 
       onMouseOver="ShowItem('download_submenu');"
     >Download</a
-><a class="navbartitle" id="help" href="guide.html"
+><a class="navbartitle" id="help" href="/guide.html"
       onMouseOut="HideItem('help_submenu');" 
       onMouseOver="ShowItem('help_submenu');"
     >Help</a
-><a class="navbartitle" id="contribute" href="contribute.html"
+><a class="navbartitle" id="contribute" href="/contribute.html"
       onMouseOut="HideItem('contribute_submenu');" 
       onMouseOver="ShowItem('contribute_submenu');"
     >Contribute</a
-><a class="navbartitle" id="about" href="aboutus.html"
+><a class="navbartitle" id="about" href="/aboutus.html"
       onMouseOut="HideItem('about_submenu');" 
       onMouseOver="ShowItem('about_submenu');"
     >About Us</a>
@@ -47,9 +47,9 @@
     onMouseOut="HideItem('home_submenu');">
   <div class="submenubox">
     <ul>
-      <li><a href="news.html" class="submenlink">News</a></li>
-      <li><a href="blog.html" class="submenlink">Blog</a></li>
-      <li><a href="license.html" class="submenlink">License</a></li>
+      <li><a href="/news.html" class="submenlink">News</a></li>
+      <li><a href="/blog.html" class="submenlink">Blog</a></li>
+      <li><a href="/license.html" class="submenlink">License</a></li>
   </div>
 </div>
 
@@ -58,9 +58,9 @@
     onMouseOut="HideItem('media_submenu');">
   <div class="submenubox">
     <ul>
-      <li><a href="screenshots.html" class="submenlink">Screenshots</a></li>
-      <li><a href="videos.html" class="submenlink">Videos</a></li>
-      <li><a href="webstart.html" class="submenlink">Web Start</a></li>
+      <li><a href="/screenshots.html" class="submenlink">Screenshots</a></li>
+      <li><a href="/videos.html" class="submenlink">Videos</a></li>
+      <li><a href="/webstart.html" class="submenlink">Web Start</a></li>
   </div>
 </div>
 
@@ -70,7 +70,7 @@
   <div class="submenubox">
     <ul>
       <li><a href="https://github.com/metsci/glimpse/downloads" class="submenlink">GitHub</a></li>
-      <li><a href="maven.html" class="submenlink">Maven</a></li>
+      <li><a href="/maven.html" class="submenlink">Maven</a></li>
     </ul>
   </div>
 </div>
@@ -80,11 +80,11 @@
     onMouseOut="HideItem('help_submenu');">
   <div class="submenubox">
     <ul>
-      <li><a href="guide.html" class="submenlink">Guide</a></li>
+      <li><a href="/guide.html" class="submenlink">Guide</a></li>
       <li><a href="https://groups.google.com/forum/?fromgroups#!forum/metsci-glimpse" class="submenlink">Forum</a></li>
       <li><a href="https://github.com/metsci/glimpse/wiki" class="submenlink">Wiki</a></li>
       <li><a href="http://glimpse.metsci.com/apidocs/1.1.x/index.html" class="submenlink">Javadoc</a></li>
-      <li><a href="requirements.html" class="submenlink">Requirements</a></li>
+      <li><a href="/requirements.html" class="submenlink">Requirements</a></li>
      </ul>
   </div>
 </div>
@@ -105,7 +105,7 @@
     onMouseOut="HideItem('about_submenu');">
   <div class="submenubox">
     <ul>
-      <li><a href="contributors.html" class="submenlink">Contributors</a></li>
+      <li><a href="/contributors.html" class="submenlink">Contributors</a></li>
       <li><a href="http://www.metsci.com" class="submenlink">Metron</a></li>
    </ul>
   </div>
