fixed previous commit, which did not take into account the /glimpse base-url which github places the site at

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,8 @@
     <meta name="description" content="{{ page.description }}" />
     {% endif %}
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link href="/css/root.css" rel="stylesheet" type="text/css">  
-    <link rel="alternate" type="application/rss+xml" title="RSS Feed for glimpse.metsci.com" href="/atom.xml" />
+    <link href="/glimpse/css/root.css" rel="stylesheet" type="text/css">  
+    <link rel="alternate" type="application/rss+xml" title="RSS Feed for glimpse.metsci.com" href="/glimpse/atom.xml" />
     <link href='favicon.ico' rel='icon' type='image/x-icon'/>
     {% include google_analytics.html %}
   </head>
