added big quick navigation icons to the front page to quickly guide visitors to the main destinations on the site.

--- a/css/root.css
+++ b/css/root.css
@@ -6,6 +6,12 @@
       color: #000000; /* black text */
     }
 
+    div.centred
+    {
+        margin: auto;
+        text-align: center;
+    }
+
     .list ul li
     {
       border-left:10px;
