--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -69,7 +69,7 @@
     onMouseOut="HideItem('download_submenu');">
   <div class="submenubox">
     <ul>
-      <li><a href="https://github.com/metsci/glimpse/downloads" class="submenlink">GitHub</a></li>
+      <li><a href="/glimpse/download.html" class="submenlink">Packages</a></li>
       <li><a href="/glimpse/maven.html" class="submenlink">Maven</a></li>
     </ul>
   </div>
